<resources>
    <string name="app_name">Ekal Arogya</string>
    <string name="no_internet_connection">Please enable data or wifi connection.</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="didn_t_received_otp">Didn\'t received OTP? Resend</string>
    <string name="login_failed_message">Failed to do login. Please try again.</string>
    <string name="resend_in">Resend in %02d sec</string>
    <string name="resend_otp_failed">Failed to send otp again. Please try again.</string>
    <string name="no_address_found">The geocoder can\'t find an address for the given latitude/longitude.</string>
    <string name="invalid_lat_long_used">The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="address_found">Address found successfully.</string>
    <string name="service_not_available">Service is not available.</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_message">If you are enjoying our app, please take a moment to rate it on PlayStore. Thanks for your support!</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">Remind me later</string>
    <string name="rate_btn_nut">No, Thanks</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_url">http://arogya.ekaltech.com/</string>
    <string name="otp_mobile_message">Please wait. You should recieve a SMS code on your number +91- %s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="select_language">Select Language</string>
    <string name="please_select_a_language_that_you_can_read_and_understand_comfortably">Please select a language that you can read and understand comfortably</string>
    <string name="family_id">Family Id</string>
    <string name="family_head">Family Head</string>
    <string name="total_members">Total Members</string>
    <string name="village_family">Village Family</string>
    <string name="add">Add</string>
    <string name="add_village_family">Add Village Family</string>
    <string name="view_village_family">View Village Family</string>
    <string name="update_village_family">Update Village Family</string>
    <string name="family_verification_detail">Family Verification Detail</string>
    <string name="head_of_family_detail">Head of Family detail</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="add_geo_location">Add Geo Location</string>
    <string name="adhar">Aadhar</string>
    <string name="family_members">Family Members</string>
    <string name="relation">Relation</string>
    <string name="married">Married</string>
    <string name="personal_hygiene">Personal Hygiene</string>
    <string name="social_sanitation">Social Sanitation</string>
    <string name="preventive">Preventive</string>
    <string name="id">Id</string>
    <string name="date">Date</string>
    <string name="children_name">Children Name</string>
    <string name="hygiene_checkup">Hygiene Checkup</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="fill_hygiene_checkup_detailes">Fill Hygiene Checkup Details</string>
    <string name="nail_checkup">Nails Checkup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="health_checkup">Health Checkup</string>
    <string name="disease_prevention">Disease Prevention</string>
    <string name="village">Village</string>
    <string name="awareness">Awareness</string>
    <string name="total_presence">Total Presence</string>
    <string name="subject_of_disease_prevention_awareness">Subject of Disease Prevention Awareness</string>
    <string name="village_name">Village Name</string>
    <string name="presence">Presence</string>
    <string name="malnutrition">Malnutrition</string>
    <string name="amenia_in_pregnancy">Anemia \nCheckup</string>
    <string name="malnutrition_checkup">Malnutrition Checkup</string>
    <string name="anemia_control_program">Anemia Control Program</string>
    <string name="name">Name</string>
    <string name="pregnant">Pregnant</string>
    <string name="anemic">Anemic</string>
    <string name="anemic_test">Anemia Test</string>
    <string name="anemic_type">Anemia type</string>
    <string name="anemia_test">Anemia Test</string>
    <string name="mid_arm_measurement">Mid-arm measurement</string>
    <string name="mulnourished">Malnourished</string>
    <string name="herbal_remedies">Herbal Remedies</string>
    <string name="ayurvedic_treatment">Ayurvedic Treatment</string>
    <string name="medicine_garden">Medicine Garden</string>
    <string name="medicine_preparation">Medicine Preparation</string>
    <string name="ayurvedic_treatments">Ayurvedic Treatments</string>
    <string name="month">Month</string>
    <string name="treatment">Treatment</string>
    <string name="total_patient">Total Patient</string>
    <string name="total_cured">Total Cured</string>
    <string name="children">Children</string>
    <string name="emergency_handling">Emergency Handling</string>
    <string name="first_aid">First Aid</string>
    <string name="emergency_training">Emergency Training</string>
    <string name="emergency_response_training">Emergency Response Training</string>
    <string name="eye_checkup">Eye Checkup</string>
    <string name="eye_screening">Eye Screening</string>
    <string name="eye_van">Eye Van</string>
    <string name="search">Search</string>
    <string name="family">Family</string>
    <string name="social_sanitation_fill">Fill social sanitisation details</string>
    <string name="compostpit">Compost Pit</string>
    <string name="toilet">Toilet</string>
    <string name="waterTreatment">Water Filter</string>
    <string name="program_date">Program Date  </string>
    <string name="malnurished">Malnurished</string>
    <string name="van_aushadhi">Van \nAushadhi</string>
    <string name="vanaushadhi">Van Aushadhi</string>
    <string name="pateint_name">Patient Name</string>
    <string name="recovery_status">Recovery Status</string>
    <string name="problem">Problem</string>
    <string name="prescription">Remedies</string>
    <string name="samiti_meeting">Samiti Meeting</string>
    <string name="no_of_presence">No. of presence</string>
    <string name="add_samiti_meeting">Add Samiti Details</string>
    <string name="poster_display">Poster Display</string>
    <string name="week">Week</string>
    <string name="add_poster_display">Arogya Poster Display</string>
    <string name="arogya_topic_posters">Arogya Poster Topic</string>
    <string name="select_week">Select Week</string>
    <string name="no_of_poster_diplay">No. of Arogya Posters Display</string>
    <string name="purpose">Purpose</string>
    <string name="village_visit">Village Visit</string>
    <string name="village_visit_add">Village Visit</string>
    <string name="total_doctor">Total Doctor</string>
    <string name="arogya_camp">Arogya Camp</string>
    <string name="program">Program</string>
    <string name="jagran_program">Jagaran Program</string>
    <string name="inspection_stay_add">Inspection Stay</string>
    <string name="inspection_subject">Subject of Inspection</string>
    <string name="dob">DOB</string>
    <string name="cancel">Cancel</string>
    <string name="power">Power</string>
    <string name="use">Use</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="sph">Sph</string>
    <string name="cyl">Cyl</string>
    <string name="axis">Axis</string>
    <string name="issue_glasses">Issue Glasses</string>
    <string name="issue_medic">Prescribe Medicine</string>
    <string name="fee">Fee</string>
    <string name="reffered_to">Referred to</string>
    <string name="absent">Absent</string>
    <string name="camera_not_supported">Camera Not Supported</string>
    <string name="present">Present</string>
    <string name="storage_permission_required">Permission Required</string>
    <string name="storage_permission_deny">deny</string>
    <string name="all_permission_required">All permission required</string>
    <string name="submit">Submit</string>
    <string-array name="mid_arm">
        <item>12-13</item>
        <item>13-14</item>
        <item>14-15</item>
    </string-array>
    <string-array name="weak_list">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
    <string-array name="treat_option">
        <item>Select</item>
        <item>Cured</item>
        <item>Not Cured</item>
        <item>Referred</item>
    </string-array>
    <string-array name="progress">
        <item>Select</item>
        <item>All</item>
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="months_array">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="arogya_topic">
        <item>Health awareness</item>
        <item>Routine</item>
    </string-array>
    <string name="app_version">App Version : %</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="task_list">Task List</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="mobile_no_option">Mobile no. (Optional)</string>
    <string name="select_image">Select Image</string>
    <string name="select_from_gallary">Select from gallery</string>
    <string name="capture_from_camera">Capture from camera</string>
    <string name="status">Status</string>
    <string name="you">You</string>
    <string name="support">Support</string>
    <string name="add_support_ticket">Add Ekal Problem</string>
    <string name="detail_support_ticket">Problem Details</string>
    <string name="sanch_coordinator">Sanch Coordinator</string>
    <string name="no_data">No data!</string>
    <string name="_month">Month</string>
    <string name="medicine_plants">Medicinal Plants</string>
    <string name="plantation">Plantation</string>
    <string name="arogya_camp_month">Arogya Camp Month</string>
    <string name="no_of_pat">No. of patient</string>
    <string name="continuee">Continue</string>
    <string name="pat_name">Patient Name</string>
    <string name="prscription">Prescription</string>
    <string name="mob_no">Mobile no</string>
    <string name="start_trip">Start Trip</string>
    <string name="warni_massg">Warning : Please note that only once you can check-in and check-out per day.</string>
    <string name="language">Language</string>
    <string name="gkv_report">GKV Report</string>
</resources>