<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/login"-->
<!--        android:icon="@drawable/ic_green_check"-->
<!--        android:title="Absent"-->
<!--        app:showAsAction="always"/>-->
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/task_list"
        android:icon="@drawable/ic_person"
        android:title="@string/task_list"
        android:visible="true"/>
    <!--   <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/task_2"
        android:title="Task List"
        android:visible="false"/>
    -->

    <item
        android:id="@+id/profile"
        android:icon="@drawable/b_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_gkv"
        android:title="@string/gkv_report"
        android:visible="true"/>
    <item
        android:id="@+id/language_choose_button"
        android:icon="@drawable/language"
        android:title="@string/language" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/action_app_version"
        android:orderInCategory="100"
        android:title="@string/app_version"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:icon="@drawable/b_attendance"-->
<!--        android:title="Attendance" />-->

<!--    <item-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="Report" />-->



</menu>