<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".main.dashotheractivity.herbalremedies.medprep.VanAushadhiAdd">
    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/tv_add"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/vanaushadhi"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_header"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/edit_box"
                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                    android:drawableTint="@color/green"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:hint=""
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pat_name" />

                    <EditText
                        android:id="@+id/pat_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_box"
                        android:hint="@string/name"
                        android:paddingLeft="@dimen/_15sdp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mob_no" />

                    <EditText
                        android:id="@+id/pat_phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:background="@drawable/edit_box"
                        android:hint="@string/mobile_no"
                        android:paddingLeft="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age" />

                        <EditText
                            android:id="@+id/pat_age"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:background="@drawable/edit_box"
                            android:hint="@string/age"
                            android:inputType="number"
                            android:maxLength="2"
                            android:paddingLeft="@dimen/_15sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <CheckBox
                                android:id="@+id/cbMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/male" />

                            <CheckBox
                                android:id="@+id/cbFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/female" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/problem" />

                    <EditText
                        android:id="@+id/pat_problem"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_box"
                        android:gravity="left"
                        android:hint="@string/problem"
                        android:padding="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prscription" />

                    <EditText
                        android:id="@+id/pat_prescription"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_box"
                        android:gravity="left"
                        android:hint="@string/prescription"
                        android:padding="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"
                        android:text="@string/fee" />

                    <EditText
                        android:id="@+id/pat_fee"
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_box"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="@dimen/_5sdp"
                        android:hint="00" />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                    <Spinner
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:minWidth="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/_28sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edit_box"
                        android:id="@+id/treatStatus"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_30sdp"
                    android:background="@drawable/green_button"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>