<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent_80"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp"
    tools:context=".auth.LanguageActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnContinue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/select_language"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:id="@+id/tv_otp_text"
                android:text="@string/please_select_a_language_that_you_can_read_and_understand_comfortably"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/language_recyclerview"
                tools:listitem="@layout/row_language_item"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:textColor="@color/white"
        android:id="@+id/btnContinue"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/continuee"/>
</RelativeLayout>